[package]
name = "neofeather"
version = "0.1.0"
authors = ["= <jacob@rosborg.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quill = { path = "./api" }

[workspace]
members = [
    "server",
    "api"
]