[package]
name = "quill"
version = "0.1.0"
authors = ["= <jacob@rosborg.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
# bevy_ecs = { git = "https://github.com/katharostech/bevy.git", branch = "feature/dynamic-systems-and-components", features = ["dynamic_api"]}